Optimize build speed

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,17 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+# Optimize build speed
+
+#Gradle will attempt to configure only necessary projects.
+org.gradle.configureondemand=true
+#For kapt.
+kapt.use.worker.api=true
+#For multi-module project.
+org.gradle.parallel=true
+#Gradle will reuse task outputs from any previous build, when possible.
+org.gradle.caching=true
+#Allows Gradle to keep what it has learned about the file system in memory
+# between builds instead of polling the file system on each build.
+org.gradle.unsafe.watch-fs=true
